fixed wrong imgs

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@ Gichtknoten, zur Förderung der Kallusbildung bei Knochenbrüchen, bei Sehnensch
   <p>Nur in der Volksmedizin als Expectorans bei Bronchitis und Asthma bronchialis.</p>
 </div>
   <div class="card-23">
-  <img src="imgs/Guimauve_officinale_dans_les_prés_salés_de_la_plage_de_Donnant.JPG" alt="Denim Jeans" style="width:100%">
+  <img src="imgs/Althaea_officinalis_-_Köhler–s_Medizinal-Pflanzen-008.jpg" alt="img" style="width:100%">
   <h1>Eibischwurzel	</h1>
   <p>Bei Reizhusten und bei entzündungen im Rachenraum.</p>
 </div>
   <div class="card-24">
-  <img src="imgs/Anis_980_490.jpg" alt="Denim Jeans" style="width:100%">
+  <img src="imgs/eichenrinde.jpg" alt="img" style="width:100%">
   <h1>Eichenrinde</h1>
   <p>Wirkt adstringierent, bei Häemorrhoiden (Sitz, Fußbäder, Umschläge).</p>
 </div>
@@ -159,7 +159,7 @@ Gichtknoten, zur Förderung der Kallusbildung bei Knochenbrüchen, bei Sehnensch
   <p>In der Voksmedizin als Diuretikum verwendet.</p>
 </div>
   <div class="card-26">
-  <img src="imgs/Anis_980_490.jpg" alt="Denim Jeans" style="width:100%">
+  <img src="imgs/euk.jpeg" alt="Denim Jeans" style="width:100%">
   <h1>Eukalyptusblatt</h1>
   <p>	Hauptnahrung der Koalabären :-) spielt bei Erkältungskrankheiten eine wichtige Rolle.</p>
 </div>
