rename some imgs

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Gichtknoten, zur Förderung der Kallusbildung bei Knochenbrüchen, bei Sehnensch
   <p>Nur in der Volksmedizin als Expectorans bei Bronchitis und Asthma bronchialis.</p>
 </div>
   <div class="card-23">
-  <img src="imgs/Althaea_officinalis_-_Köhler–s_Medizinal-Pflanzen-008.jpg" alt="img" style="width:100%">
+  <img src="imgs/althaea.jpg" alt="img" style="width:100%">
   <h1>Eibischwurzel	</h1>
   <p>Bei Reizhusten und bei entzündungen im Rachenraum.</p>
 </div>
@@ -154,7 +154,7 @@ Gichtknoten, zur Förderung der Kallusbildung bei Knochenbrüchen, bei Sehnensch
   <p>Wirkt adstringierent, bei Häemorrhoiden (Sitz, Fußbäder, Umschläge).</p>
 </div>
   <div class="card-25">
-  <img src="imgs/Guimauve_officinale_dans_les_prés_salés_de_la_plage_de_Donnant.JPG" alt="Denim Jeans" style="width:100%">
+  <img src="imgs/eisenktaut.jpeg" alt="Denim Jeans" style="width:100%">
   <h1>Eisenkraut	</h1>
   <p>In der Voksmedizin als Diuretikum verwendet.</p>
 </div>
